crates/paladin-auth-tui/tests/snapshots/destroy_snapshots__snapshot_destroy_modal_default.snap
---
source: crates/paladin-auth-tui/tests/destroy_snapshots.rs
expression: "render_to_text(&destroy_state(modal), 80, 24)"
---
┌ Paladin Auth — create vault ─────────────────────────────────────────────────┐
│                                                                              │
│  Vault: /home/u/.local/share/paladin-auth/vault.bin                          │
│                                                                              │
│  Choose vault protection:                                                    │
│   ┌ Destroy vault ───────────────────────────────────────────────────────┐   │
│  ▶│ This will permanently delete the vault at                            │   │
│   │ /home/u/.local/share/paladin-auth/vault.bin and its backup at        │   │
│   │ /home/u/.local/share/paladin-auth/vault.bin.bak. This cannot be      │   │
│  ↑│ undone. The files are unlinked, not securely erased, so an encrypted │   │
│   │ vault is the only reliable protection for secrets already written to │   │
│  C│ disk.                                                                │   │
│   │ Type yes to confirm:                                                 │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                    [ Cancel ]    [ Delete vault ]                    │   │
│   │            Tab switches  ·  Enter confirms  ·  Esc cancels           │   │
│   └──────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
