crates/paladin-auth-tui/tests/snapshots/destroy_snapshots__snapshot_startup_error_footer_hint.snap
---
source: crates/paladin-auth-tui/tests/destroy_snapshots.rs
expression: "render_to_text(&state, 80, 12)"
---
┌ Paladin Auth — startup error ────────────────────────────────────────────────┐
│                                                                              │
│  Vault path: /home/u/.local/share/paladin-auth/vault.bin                     │
│                                                                              │
│  vault header is corrupt                                                     │
│                                                                              │
│  Press Esc, q, or Ctrl-C to quit.                                            │
│  Ctrl+Shift+D delete vault                                                   │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
