crates/paladin-auth-tui/tests/snapshots/destroy_snapshots__snapshot_unlock_footer_hint.snap
---
source: crates/paladin-auth-tui/tests/destroy_snapshots.rs
expression: "render_to_text(&state, 80, 12)"
---
┌ Paladin Auth — unlock ───────────────────────────────────────────────────────┐
│                                                                              │
│  Vault: /home/u/.local/share/paladin-auth/vault.bin                          │
│                                                                              │
│  Passphrase:                                                                 │
│                                                                              │
│  Press Enter to unlock; Esc or Ctrl-C to quit.                               │
│  Ctrl+Shift+D delete vault                                                   │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
